// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuySummary should render correctly when publishing 1`] = `
<Screen>
  <ForwardRef
    contentContainerStyle={
      [
        {
          "flexGrow": 1,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingTop": 16,
        },
        {
          "paddingBottom": 32,
          "paddingTop": 32,
        },
      ]
    }
  >
    <BuyOfferSummary />
  </ForwardRef>
  <PrimaryButton
    loading={true}
    narrow={true}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
        "marginBottom": 20,
      }
    }
  >
    publishing
  </PrimaryButton>
</Screen>
`;

exports[`BuySummary should render correctly while peach wallet is still signing message 1`] = `
<Screen>
  <ForwardRef
    contentContainerStyle={
      [
        {
          "flexGrow": 1,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingTop": 16,
        },
        {
          "paddingBottom": 32,
          "paddingTop": 32,
        },
      ]
    }
  >
    <BuyOfferSummary />
  </ForwardRef>
  <PrimaryButton
    loading={false}
    narrow={true}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
        "marginBottom": 20,
      }
    }
  >
    next
  </PrimaryButton>
</Screen>
`;

exports[`BuySummary should render correctly with custom payout wallet and signature is still missing 1`] = `
<Screen>
  <ForwardRef
    contentContainerStyle={
      [
        {
          "flexGrow": 1,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingTop": 16,
        },
        {
          "paddingBottom": 32,
          "paddingTop": 32,
        },
      ]
    }
  >
    <BuyOfferSummary />
  </ForwardRef>
  <PrimaryButton
    loading={false}
    narrow={true}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
        "marginBottom": 20,
      }
    }
  >
    next
  </PrimaryButton>
</Screen>
`;

exports[`BuySummary should render the BuySummary view 1`] = `
<Screen>
  <ForwardRef
    contentContainerStyle={
      [
        {
          "flexGrow": 1,
          "justifyContent": "center",
          "paddingBottom": 16,
          "paddingTop": 16,
        },
        {
          "paddingBottom": 32,
          "paddingTop": 32,
        },
      ]
    }
  >
    <BuyOfferSummary />
  </ForwardRef>
  <PrimaryButton
    loading={false}
    narrow={true}
    onPress={[MockFunction]}
    style={
      {
        "alignSelf": "center",
        "marginBottom": 20,
      }
    }
  >
    publish
  </PrimaryButton>
</Screen>
`;
